Fixed header and footer, content within (non-overlapping)

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,7 +8,7 @@ $color-orange: rgb(243, 200, 120);
 
 body {
   background-color:$color-orange;
-  margin-top:60px;
+
 }
 
 /*THOUGHT BUBBLE STYLES*/
@@ -145,3 +145,6 @@ footer{
 }
 
 
+.header-height{
+  margin-top: 60px;
+}
